--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           <p class='mobile-title'>Layout App</p>
           <div class='portfolio-item list'>
             <div class='img-wrapper'>
-            <img src="/images/layout.png" alt="layout-app">
+            <img src="images/layout.png" alt="layout-app">
             <div class='skill-used'>
               <div class='html-svg skill-one'>
                 <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
@@ -153,7 +153,7 @@
           <p class='mobile-title'>Form App</p>
           <div class='portfolio-item list'>
             <div class='img-wrapper'>
-            <img src="/images/form.png" alt="form-app">
+            <img src="images/form.png" alt="form-app">
             <div class='skill-used'>
               <div class='html-svg skill-one'>
                 <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
@@ -189,7 +189,7 @@
           <p class='mobile-title'>Photo Gallery App</p>
           <div class='portfolio-item list'>
             <div class='img-wrapper'>
-            <img src="/images/photoGallery.png" alt="photo-gallery-app">
+            <img src="images/photoGallery.png" alt="photo-gallery-app">
             <div class='skill-used'>
               <div class='html-svg skill-one'>
                 <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
@@ -218,7 +218,7 @@
           <p class='mobile-title'>Wheel of Success Game App</p>
           <div class='portfolio-item list'>
             <div class='img-wrapper'>
-            <img src="/images/wheelSuccess.png" alt="wheel-success-app">
+            <img src="images/wheelSuccess.png" alt="wheel-success-app">
             <div class='skill-used'>
               <div class='html-svg skill-one'>
                 <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
@@ -255,7 +255,7 @@
           <p class='mobile-title'>Web Graph App</p>
           <div class='portfolio-item list'>
             <div class='img-wrapper'>
-            <img src="/images/webApp.png" alt="web-graph-app">
+            <img src="images/webApp.png" alt="web-graph-app">
             <div class='skill-used'>
               <div class='html-svg skill-one'>
                 <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
@@ -293,7 +293,7 @@
           <p class='mobile-title'>Employee Directory App</p>
           <div class='portfolio-item list'>
             <div class='img-wrapper'>
-            <img src="/images/directory.png" alt="employee-directory-app">
+            <img src="images/directory.png" alt="employee-directory-app">
             <div class='skill-used'>
               <div class='html-svg skill-one'>
                 <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
